Added simulated noise to the connection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(Satellite
 
 add_library(Packet src/packet.cpp src/packet.h)
 add_library(GPS src/gps.cpp src/gps.h)
+add_library(Noise src/simulate_noise.cpp src/simulate_noise.h)
 
 target_link_libraries(GroundStation
    PRIVATE
@@ -24,4 +25,5 @@ target_link_libraries(Satellite
    PRIVATE
    Packet
    GPS
+   Noise
 )
